# Fgc_attendance

./: db.sqlite3  pyproject.toml
Attendance/: settings.py  urls.py
form/: admin.py  models.py  urls.py  views.py
form/migrations/: 0001_initial.py  0002_rename_state_state_state_and_more.py
form/template/: oyebola.html
form/templates/: index.html
record/: urls.py  views.py
