[tool.poetry]
name = "RECORD OF ATTENDANCE"
version = "0.1.0"
description = "This project is to create attendance record for FGC programmes"
authors = ["Oyebola Odeleye"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"
black = "^21.12b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
